# firerobot_ivan

./: README.md
navigation2/nav2_dwb_controller/dwb_core/: CMakeLists.txt
realsense-ros/realsense2_camera/launch/: rs_launch.py
realsense-ros/realsense2_description/urdf/: _d435i_imu_modules.urdf.xacro
robot_control/: CMakeLists.txt  motor_base.xml  package.xml
robot_control/config/: ekf.yaml  ekf_wh.yaml  ros2_control.yaml  ros2_imu.yaml
robot_control/description/: robot.xacro
robot_control/include/motor_base/: motor_set.h  visibility_control.h
robot_control/launch/: ekf.launch.py  imu_open.launch.py  robot.launch.py
robot_control/src/: cmd_vel_bridge.py  imu_backup.cpp  imu_to_base_frame.cpp  main_control_node.py  motor_set.cpp  robot_mission.py  teleop_twist_keyboard_stamped.py  test_motor_node.cpp  zlac8015d.cpp
robot_nav2/: CMakeLists.txt  package.xml
robot_nav2/config/: mapper_params_online_async.yaml  nav2_param.yaml  nav2_param_back.yaml
robot_nav2/launch/: localization.launch.py  nav2_launch.py  navigation.launch.py  rviz.launch.py  slam_toolbox.launch.py  waypoint_fire.launch.py
robot_nav2/maps/: map.pgm  map.yaml  map1.pgm  map1.yaml
robot_nav2/src/: find_3m.py  fire_point_node.py  fire_target.json  original_point.json  waypoint.py  waypoint_node.py
ros2_laser_scan_merger/: CMakeLists.txt  package.xml
ros2_laser_scan_merger/config/: params.yaml
ros2_laser_scan_merger/launch/: merge_2_scan.launch.py
ros2_laser_scan_merger/src/: main.cpp
rplidar_ros/: CMakeLists.txt
rplidar_ros/launch/: rplidar_s2_launch.py  rplidar_two_s2_launch.py  view_rplidar_s2_launch.py
rplidar_ros/src/: angle_filter_node.py  rplidar_node.cpp
serial/: CMakeLists.txt
thermal_msgs/: CMakeLists.txt  package.xml
thermal_msgs/msg/: ThermalAlert.msg
thermal_msgs/srv/: AutoFocus.srv
zlac8015d_diff_control/: CMakeLists.txt  motor_set_plugin.xml  package.xml
zlac8015d_diff_control/config/: motor_set_config.yaml
zlac8015d_diff_control/include/motor_base/: motor_set.h
zlac8015d_diff_control/launch/: bringup.launch.py  description.launch.py  open_robot.launch.py
zlac8015d_diff_control/src/: fire_keyboard.py  motor_set.cpp
zlac8015d_diff_control/urdf/: robot.xacro
