<?xml version="1.0"?>
<package format="3">
  <name>ros2_laser_scan_merger</name>
  <version>1.0.0</version>
  <description>A Package to combine several laser scan values</description>
  <maintainer email="michaeljonathan664@gmail.com">mich1342</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 泛型依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>rcutils</depend>
  <depend>geometry_msgs</depend>

  <!-- 特定依赖 -->
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
